# dbdoczygen-fonts

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  org.kde.oxygen-fonts.metainfo.xml
oxygen-fonts/Bold-700/src/: Dbdoczygen-Sans-Bold.sfd  Hypoxia-Sans-Bold.sfd  Oxygen-GMCL-Sans-Bold.sfd  Oxygen-Sans-Bold.sfd  dbdoczygen-Sans-Bold.sfd
oxygen-fonts/Mono-400/src/: Dbdoczygen-Mono.sfd  Hypoxia-Mono.sfd  dbdoczygen-Mono.sfd
oxygen-fonts/Regular-400/src/: Dbdoczygen-Sans.sfd  Hypoxia-Sans.sfd  Oxygen-GMCL-Sans.sfd  Oxygen-Sans.sfd  dbdoczygen-Sans.sfd
oxygen-fonts/mono-400/src/: OxygenMono-Regular.sfd
